hphp/test/zend/good/ext/json/tests/bug41504.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('json')) print 'skip';
}
