hphp/test/zend/bad/ext/reflection/tests/ReflectionFunction_getClosureScopeClass.php.skipif
<?php
if (!extension_loaded('reflection') || !defined('PHP_VERSION_ID') || PHP_VERSION_ID < 50399) {
  print 'skip';
}
?>